# MOLLER-IntDetectorOpticalSim

./: CMakeLists.txt  GREXMakeScanMacros.py  MOLLEROpt.cc  README.md
data/: Absorption.txt  Absorption170MRad.txt  Absorption70MRad.txt  BialkaliCathodeRefrInd_Imaginary.txt  BialkaliCathodeRefrInd_Real.txt  ExtractScanResults.C  ExtractScanResultsLocal.C  FusedSilicaReflectance.txt  G4OpBoundaryProcess.cc  G4OpBoundaryProcess.hh  GenerateOpticalTable.C  Mylar-30deg.txt  OpticalPropertiesInputData.txt  PMT-QE-Quartz.txt  SP3AA.ASC  SP3C.ASC  SP3CA.ASC  TM-170Mrad-2.txt  TM-170Mrad.txt  TM-35Mrad-2.txt  TM-35Mrad.txt  bogdanMylar.txt  bogdanMylar_30.txt  bogdanMylar_30b.txt  bogdanMylar_45.txt  bogdanMylar_45b.txt  bogdanMylar_60.txt  bogdanMylar_60b.txt  bogdanMylar_high.txt  bogdanMylar_low.txt  my1milMylar.txt  my1milMylar_30.txt  output2.root
docs/: RunningOSGBatchJobs.md
include/: #Root_include.h#  Geant4_include.hh  MOLLEROptAnalysis.hh  MOLLEROptAnalysis.hh~  MOLLEROptConstruction.hh  MOLLEROptConstruction.hh~  MOLLEROptDetector.hh  MOLLEROptDetector.hh~  MOLLEROptDetectorEvent.hh  MOLLEROptDetectorEvent.hh~  MOLLEROptDetectorLightGuide.hh  MOLLEROptDetectorLightGuide.hh~  MOLLEROptDetectorMessenger.hh  MOLLEROptDetectorMessenger.hh~  MOLLEROptDetectorPMT.hh  MOLLEROptDetectorPMT.hh~  MOLLEROptDetectorQuartz.hh  MOLLEROptDetectorQuartz.hh~  MOLLEROptDetectorQuartzSegmented.hh~  MOLLEROptDictLinkDef.hh  MOLLEROptEventAction.hh  MOLLEROptLightGuideHit.hh  MOLLEROptLightGuideSD.hh  MOLLEROptLinkDef.hh  MOLLEROptMainEvent.hh  MOLLEROptMaterial.hh  MOLLEROptMaterial.hh~  MOLLEROptMessenger.hh  MOLLEROptOpBoundaryProcess.hh  MOLLEROptPMTHit.hh  MOLLEROptPMTSD.hh  MOLLEROptPhysicsList.hh  MOLLEROptPhysicsListMessenger.hh  MOLLEROptPrimaryEvent.hh  MOLLEROptPrimaryGeneratorAction.hh  MOLLEROptPrimaryGeneratorAction.hh~  MOLLEROptPrimaryGeneratorActionMessenger.hh  MOLLEROptPrimaryGeneratorActionMessenger.hh~  MOLLEROptQuartzHit.hh  MOLLEROptQuartzSD.hh  (+9 more)
macros/: DetectorOpticalParameterOptimization.ipynb  MakeScanMacros3.py  Qt.mac  Qt.mac~  batchSubmission.py  extractRunInfo.C  gui.mac  gui.mac~  myRun.mac  myRun.mac~  osg.py  osg.sh  osg.submit  osgExtract.C  vis.mac  vis.mac~
macros/December2021Design/: Ring4_Front_vis.mac  Ring4_Front_vis.mac~
scripts/: batchSubmission.py
src/: #MOLLEROptAnalysis.cc#  .#MOLLEROptAnalysis.cc  MOLLEROptAnalysis.cc  MOLLEROptAnalysis.cc~  MOLLEROptConstruction.cc  MOLLEROptConstruction.cc~  MOLLEROptDetMessenger.hh  MOLLEROptDetSD.hh  MOLLEROptDetector.cc  MOLLEROptDetector.cc~  MOLLEROptDetectorEvent.cc  MOLLEROptDetectorEvent.cc~  MOLLEROptDetectorLightGuide.cc  MOLLEROptDetectorLightGuide.cc~  MOLLEROptDetectorMessenger.cc  MOLLEROptDetectorMessenger.cc~  MOLLEROptDetectorPMT.cc  MOLLEROptDetectorPMT.cc~  MOLLEROptDetectorQuartz.cc  MOLLEROptDetectorQuartz.cc~  MOLLEROptDetectorQuartzSegmented.cc~  MOLLEROptEventAction.cc  MOLLEROptEventAction.cc~  MOLLEROptLightGuideHit.cc  MOLLEROptLightGuideSD.cc  MOLLEROptLightGuideSD.cc~  MOLLEROptMainEvent.cc  MOLLEROptMaterial.cc  MOLLEROptMaterial.cc~  MOLLEROptMessenger.cc  MOLLEROptOpBoundaryProcess.cc  MOLLEROptPMTHit.cc  MOLLEROptPMTSD.cc  MOLLEROptPMTSD.cc~  MOLLEROptPhysicsList.cc  MOLLEROptPhysicsListMessenger.cc  MOLLEROptPrimaryEvent.cc  MOLLEROptPrimaryGeneratorAction.cc  MOLLEROptPrimaryGeneratorAction.cc~  MOLLEROptPrimaryGeneratorActionMessenger.cc  (+13 more)
